# fooyin

./: .clang-tidy  BUILD.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md
.github/workflows/: build-freebsd.yml  build-linux.yml  build-windows.yml  build.yml  clang-format-check.yml  create-release.yml
ci/: archlinux-build.sh  archlinux-depends.sh  fedora-depends.sh  macos-build.sh
cmake/: FooyinPackageConfig.cmake  FooyinPackaging.cmake  FooyinPluginSelection.cmake  FooyinSummary.cmake
data/: dbschema.xml  icons.qrc
include/core/: constants.h  coresettings.h  ratingsymbols.h  track.h
include/gui/: configdialog.h  contextmenuutils.h  coverprovider.h  fywidget.h  guiconstants.h  guisettings.h  guiutils.h  iconloader.h  layoutprovider.h  propertiesdialog.h  trackmimedata.h  trackselectioncontroller.h  widgetfilter.h  widgetprovider.h  windowcontroller.h
include/utils/: containers.h  fileutils.h  helpers.h  itemregistry.h  signalthrottler.h  stardelegate.h  stareditor.h  starrating.h  stringutils.h  treeitem.h  utils.h  worker.h
src/core/: CMakeLists.txt  application.cpp  internalcoresettings.cpp  internalcoresettings.h  stringpool.cpp  track.cpp
src/plugins/filters/: CMakeLists.txt  filtercolumneditordialog.cpp  filtercolumneditordialog.h  filtercolumnregistry.cpp  filtercolumnregistry.h  filterconfigwidget.cpp  filterconfigwidget.h  filtercontextmenu.h  filtercontroller.cpp  filtercontroller.h  filterdelegate.cpp  filterdelegate.h  filteritem.cpp  filteritem.h  filtermodel.cpp  filtermodel.h  filterpipeline.cpp  filterpipeline.h  filterpopulator.cpp  filterpopulator.h  filterrows.cpp  filterrows.h  filterscolumnmodel.cpp  filtersplugin.cpp  filterwidget.cpp  filterwidget.h
tests/: CMakeLists.txt  testutils.cpp  testutils.h
(+727 files in other folders)
